<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RegisterActivity"
        android:background="@color/primaryColor">


    <com.google.android.material.textfield.TextInputLayout
            android:orientation="vertical"
            android:layout_width="match_parent" android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            android:background="@color/secondaryLightColor"
    >

        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/first_name"
                                                                 android:id="@+id/et_firstname_register"
                                                                 android:padding="8dp"
        />
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/last_name"
                                                                 android:padding="8dp"
        />
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/email"
                                                                 android:inputType="textEmailAddress"
                                                                 android:padding="8dp"
        />
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/password"
                                                                 android:inputType="textPassword"
                                                                 android:padding="8dp"
        />
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/password_confirm"
                                                                 android:inputType="textPassword"
                                                                 android:padding="8dp"
        />
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/phone_number"
                                                                 android:inputType="phone"
                                                                 android:padding="8dp"
        />
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/employee_numer"
                                                                 android:inputType="number"
                                                                 android:padding="8dp"
        />
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/position"
                                                                 android:padding="8dp"
        />
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/company_name"
                                                                 android:padding="8dp"
        />
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="@string/Linkedin"
                                                                 android:inputType="textUri"
                                                                 android:padding="8dp"
        />


        <com.google.android.material.button.MaterialButton android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:text="@string/register"
                                                           android:padding="8dp"
                                                           android:id="@+id/btn_register_register"/>

    </com.google.android.material.textfield.TextInputLayout>

</ScrollView>